@@ -68,6 +68,9 @@ Core and Builtins
 Library
 -------
 
+- Issue #13592: Improved the repr for regular expression pattern objects.
+  Based on patch by Hugo Lopes Tavares.
+
 - Issue #19641: Added the audioop.byteswap() function to convert big-endian
   samples to little-endian and vice versa.
 
